--- a/widget-weather-and-clock/widget-weather-and-clock.css
+++ b/widget-weather-and-clock/widget-weather-and-clock.css
@@ -34,8 +34,8 @@
 }
 
 .widget-weather-and-clock .description {
-  padding-top: 0;
-  padding-bottom: 0.5em;
+//  padding-top: 0;
+//  padding-bottom: 0.5em;
 }
 
 .widget-weather-and-clock .tooltip {
